--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         
         <h2>Contact Me</h2>
-        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:contact@example.com">contact@example.com</a>.</p>
+        <p>If you'd like to get in touch, feel free to email me at <a href="krystianbialy99@example.com">contact@example.com</a>.</p>
     </div>
 </body>
 </html>
